fix map top hidden under nav bar; remove datatables (good riddance)

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -11,6 +11,7 @@ body {
   height: 100%;
   padding: 0px;
   margin: 0px;
+  margin-top: 50px;
 }
 td {
     padding: 5px;
